adjusted go build command
Signed-off-by: Ryan Walter <rwalt@pm.me>

--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -14,9 +14,9 @@ jobs:
           go-version: 1.15.14
       - run: go version 
       - run: mkdir BUILD
-      - run: go build main.go -o mealie-cli
+      - run: go build -o mealie-cli
       - uses: actions/upload-artifact@v2
         with: 
           name: mealie-cli
-          path: BUILD/mealie-cli
+          path: mealie-cli
   
