--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -2,6 +2,7 @@ name: Build
 
 on:
   release:
+    types: [created, published, prereleased, released, edited, unpublished]
   workflow_dispatch:
 
 jobs:
