--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,6 +13,7 @@ builds:
       - linux
       - windows
       - darwin
+    binary: mealie
 archives:
   - replacements:
       darwin: Darwin
@@ -20,6 +21,7 @@ archives:
       windows: Windows
       386: i386
       amd64: x86_64
+    format: "tar.gz"
 checksum:
   name_template: 'checksums.txt'
 snapshot:
