--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: action/checkout@v2
+        uses: actions/checkout@v2
       - name: GoSetup
         uses: actions/setup-go@v2
       - name: GoReleaser
