--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -22,6 +22,23 @@ archives:
       386: i386
       amd64: x86_64
     format: "tar.gz"
+nfpms:
+  - replacements:
+      darwin: Darwin
+      linux: Linux
+      windows: Windows
+      386: i386
+      amd64: x86_64
+    homepage: "https://github.com/rwaltr/go-mealie"
+    maintainer: "Rwaltr"
+    description: "A simple Mealie Client based on Go"
+    license: Apache 2.0
+    formats:
+      - apk
+      - deb
+      - rpm
+    bindir: /usr/local/bin
+
 checksum:
   name_template: 'checksums.txt'
 snapshot:
