promoted goreleaser to not drafts
Signed-off-by: Ryan Walter <rwalt@pm.me>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -47,7 +47,7 @@ checksum:
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
 release:
-  draft: true
+  draft: false
 source:
   enabled: true
 changelog:
